# HdhomerunSignalMeterLib

./: .gitignore  .project  AndroidManifest.xml  CMakeLists.txt  build.gradle  proguard-rules.pro
jni/: Files_changed.txt  Makefile  com_zaren_HdhomerunSignalMeterLib_data_DiscoverTask.h  com_zaren_HdhomerunSignalMeterLib_data_HdhomerunDevice.h  hdhomerun.h  hdhomerun_channels.c  hdhomerun_channels.h  hdhomerun_channelscan.c  hdhomerun_channelscan.h  hdhomerun_config.c  hdhomerun_control.c  hdhomerun_debug.c  hdhomerun_device.c  hdhomerun_device.h  hdhomerun_device_selector.c  hdhomerun_device_selector.h  hdhomerun_discover.c  hdhomerun_discover.h  hdhomerun_os_posix.c  hdhomerun_os_posix.h  hdhomerun_os_windows.c  hdhomerun_os_windows.h  hdhomerun_pkt.c  hdhomerun_pkt.h  hdhomerun_signalMeter.c  hdhomerun_sock_posix.c  hdhomerun_sock_windows.c  hdhomerun_types.h  hdhomerun_video.c  logger.h
res/drawable/: progressbargreen.xml  progressbaryellow.xml
res/values/: strings.xml
src/com/zaren/HdhomerunSignalMeterLib/data/: CableCardStatus.java  ChannelList.java  ChannelScanProgram.java  ChannelScanResults.java  ChannelScanRunnable.java  CurrentChannelAndProgram.java  DeviceController.java  DeviceNotFoundException.java  DeviceResponse.java  HdhomerunCommErrorException.java  HdhomerunDevice.java  HdhomerunDiscoverDevice.java  ProgramsList.java  (+9 more)
src/main/: AndroidManifest.xml
src/main/cpp/: hdhomerun_channels.c  hdhomerun_channels.h  hdhomerun_channelscan.c  hdhomerun_channelscan.h  hdhomerun_debug.c  hdhomerun_device.c  hdhomerun_device.h  hdhomerun_os_posix.c  hdhomerun_signalMeter.c  hdhomerun_sock_posix.c  jni_load.cpp  logger.c  logger.h
src/main/cpp/discover/: discover_jni.cpp  discover_jni.hpp
src/main/cpp/legacy/: hdhomerun_device_jni.c
src/main/cpp/libhdhomerun/: hdhomerun.h  hdhomerun_channelscan.c  hdhomerun_discover.c  hdhomerun_discover.h
src/main/jni/: Android.mk  com_zaren_HdhomerunSignalMeterLib_data_HdhomerunDevice.h  hdhomerun.h  hdhomerun_channelscan.h  hdhomerun_debug.c  hdhomerun_discover.c  hdhomerun_discover.h  hdhomerun_os_posix.h  logger.c
src/main/res/drawable/: progressbarneutral.xml  progressbarred.xml
src/main/res/values/: attrs.xml  color.xml
(+47 files in other folders)
